--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -3,10 +3,22 @@ services:
   dev_db:
     image: postgres:15.4-alpine3.18
     environment:
-      POSTGRES_PASSWORD: pass
-      POSTGRES_USER: goxygen
-      POSTGRES_DB: goxygen
+      POSTGRES_PASSWORD: mysecretpassword
+      POSTGRES_USER: postgres
+      POSTGRES_DB: postgres
     ports:
-      - 5432:5432
+      - "5432:5432"
     volumes:
-      - ./init-db.sql:/docker-entrypoint-initdb.d/init.sql
+      - type: bind
+        source: ./init-db.sql
+        target: /docker-entrypoint-initdb.d/init.sql
+        read_only: true
+      - postgres_data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+
+volumes:
+  postgres_data:
